--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@zzd41/simple-npm-package",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "types": "./lib/cjs/types/index.d.ts",
+  "main": "./lib/cjs/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf ./lib",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
+    "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
+    "prepack": "npm run build",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -16,5 +21,31 @@
   "bugs": {
     "url": "https://github.com/zidanDirk/best-practices-create-modern-npm-package/issues"
   },
-  "homepage": "https://github.com/zidanDirk/best-practices-create-modern-npm-package#readme"
+  "homepage": "https://github.com/zidanDirk/best-practices-create-modern-npm-package#readme",
+  "description": "",
+  "files": [
+    "lib/**/*"
+  ],
+  "exports": {
+    ".": {
+      "import": {
+        "type": "./lib/esm/types/index.d.ts",
+        "default": "./lib/esm/index.mjs"
+      },
+      "require": {
+        "types": "./lib/cjs/types/index.d.ts",
+        "default": "./lib/cjs/index.js"
+      }
+    }
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/jest": "^29.0.3",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
+    "typescript": "^4.8.3"
+  }
 }
