--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clean": "rm -rf ./lib",
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
-    "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
+    "build:esm": "npx --package typescript tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
+    "build:cjs": "npx --package typescript tsc -p ./configs/tsconfig.cjs.json",
     "prepack": "npm run build",
     "test": "mocha",
     "semantic-release": "semantic-release"
